<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailFragment"
    android:theme="@style/Theme.MaterialComponents.DayNight"
    tools:ignore="contentDescription">

    <ImageButton
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:background="@null"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/civ_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/company"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/Linear_names">

        <TextView
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/tv_detail_FollowingNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="0" />

        <TextView
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/FollowingDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/following"
            android:textColor="#040202"
            android:textColorHint="#090505"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/company"
        app:layout_constraintStart_toStartOf="@+id/company"
        app:layout_constraintTop_toBottomOf="@+id/Linear_names"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tv_detail_ReposNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_regular"
            tools:text="0" />

        <TextView
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/reposDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/repository"
            android:textColor="#040202"
            android:textColorHint="#090505"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Linear_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civ_avatar"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv_name"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_black"
            android:text="@string/github_name"
            />
        <TextView
            android:id="@+id/tv_username"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github_username"
            android:fontFamily="@font/poppins_light"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/location"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/company"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_place_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/location_name"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/company"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Linear_names"
        app:layout_constraintVertical_bias="0.906">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_business_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/company"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/company_name"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/company"
        app:layout_constraintEnd_toEndOf="@+id/company"
        app:layout_constraintTop_toBottomOf="@+id/Linear_names"
        app:layout_constraintVertical_bias="0.6">

        <TextView
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/tv_detail_FollowersNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="0" />

        <TextView
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/FollowersDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/followers"
            android:textColor="#040202"
            android:textColorHint="#090505"
            android:textSize="12sp" />
    </LinearLayout>


    <com.google.android.material.tabs.TabLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/tabs"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:tabTextColor="@color/black"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>